2011-04-28  Paul Eggert  <eggert@cs.ucla.edu>

	* lread.c (hash_string): Use size_t, not int, for hash computation.
	Normally we prefer signed values; but hashing is special, because
	it's better to use unsigned division on hash table sizes so that
	the remainder is nonnegative.  Also, size_t is the natural width
	for hashing into memory.  The previous code used 'int', which doesn't
	retain enough info to hash well into very large tables.
	(oblookup, oblookup_last_bucket_number, Funintern): Likewise.

	* dbusbind.c: Don't possibly lose pointer info when converting.
	(xd_remove_watch, Fdbus_init_bus, xd_read_queued_messages):
	Use XPNTR rather than XHASH, so that the high-order bits of
	the pointer aren't lost when converting through void *.

	* eval.c (Fautoload): Don't double-shift a pointer.

	* fns.c (Frandom): Let EMACS_UINT be wider than unsigned long.

2011-04-27  Paul Eggert  <eggert@cs.ucla.edu>

	* doprnt.c (doprnt): Support "ll" length modifier, for long long.

2011-04-27  Juanma Barranquero  <lekktu@gmail.com>

	* makefile.w32-in: Update dependencies.

2011-04-27  Eli Zaretskii  <eliz@gnu.org>

	Improve `doprnt' and its usage.  (Bug#8545)
	* doprnt.c (doprnt): Make sure `format' is never accessed beyond
	`format_end'.  Remove support for %l as a conversion specifier.
	Don't use xrealloc.  Improve diagnostics when the %l size modifier
	is used.  Update the commentary.

	* eval.c (verror): Simplify calculation of size_t.

	* coding.c (Ffind_operation_coding_system): Fix diagnostic error
	messages.

2011-04-27  Yoshiaki Kasahara  <kasahara@nc.kyushu-u.ac.jp>  (tiny change)

	* buffer.c (init_buffer) [USE_MMAP_FOR_BUFFERS]: Adjust to aliasing
	change.

2011-04-27  Paul Eggert  <eggert@cs.ucla.edu>

	* nsmenu.m: Replace all uses of XVECTOR with ASIZE and AREF.
	This makes this file independent of the recent pseudovector change.

2011-04-26  Paul Eggert  <eggert@cs.ucla.edu>

	* keyboard.c (handle_user_signal): Fix pointer signedness problem.
